--- a/WIP.html
+++ b/WIP.html
@@ -1,1 +1,11 @@
+---
+permalink: /WIP.html
+title: "Work in progress
+layout: default
+sitemap: false
+---
 
+<article>
+  <header><h1>Work in progress</h1></header>
+  <p>Try again later!</p>
+</article>
