--- a/404.html
+++ b/404.html
@@ -6,6 +6,6 @@ sitemap: false
 ---
 
 <article>
-  <header><h1>404</h1></header>
-  <p>Page not found</p>
+  <header><h1>Work in Progress</h1></header>
+  <p>Come back later!</p>
 </article>
